Add JDK9 Java options
Former-commit-id: d10262808980b8ce2f15a7df4ebf3e2110aa73f7
Former-commit-id: 267969fed3753b87f1afbbef5d56e60e93f0e398